# Autonomous-Research-Agent-Console

./: README.md  action.py  agent6.py  architecture.md  architecture_analysis.md  decision.py  demo_runner.py  how_to_run.md  mcp_server.py  memory.py  perception.py  pyproject.toml  schemas.py  usage.json  web_server.py
llm_gatewayV3/: main.py
prompts/: decision.txt
static/: index.html
validation/: decision_schema.json
